package json file changes

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "dev": "nodemon index.js"
+    "start": " index.js",
+    "dev": " index.js"
   },
   "keywords": [],
   "author": "MamadTaheri68",
