--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,11 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": " index.js",
-    "dev": " index.js"
+    "dev": "nodemon index.js",
+    "serve": "nodemon index.js"
   },
   "keywords": [],
-  "author": "MamadTaheri68",
+  "author": "developerrabbil",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
